testsuite/tests/ghc-regress/rename/should_fail/all.T

include ($confdir ++ "/../vanilla-test.T")

-- Args to vtf are: extra compile flags

test "rnfail001" { vtf("") }
test "rnfail002" { vtf("") }
test "rnfail003" { vtf("") }
test "rnfail004" { vtf("") }
test "rnfail007" { vtf("") }
test "rnfail008" { vtf("") }
test "rnfail009" { vtf("") }
test "rnfail010" { vtf("") }
test "rnfail011" { vtf("") }
test "rnfail012" { vtf("") }
test "rnfail013" { vtf("") }
test "rnfail014" { vtf("") }
test "rnfail015" { vtf("") }
test "rnfail016" { vtf("") }
test "rnfail017" { vtf("") }
test "rnfail018" { vtf("") }
test "rnfail019" { vtf("") }
test "rnfail020" { vtf("") }
test "rnfail021" { vtf("") }
test "rnfail022" { vtf("") }
test "rnfail023" { vtf("") }
test "rnfail024" { vtf("") }
test "rnfail025" { vtf("") }
test "rnfail026" { vtf("") }
test "rnfail027" { vtf("") }
